Update presentacion de bienvenida

--- a/acerca.html
+++ b/acerca.html
@@ -27,12 +27,16 @@
   <main class="container mx-auto my-8">
     <section class="mb-8">
       <h2 class="text-3xl font-bold mb-4">Objetivo General del Curso</h2>
-      <p style="text-align: justify;">Este curso está diseñado para desarrolladores web principiantes o intermedios con conocimientos básicos de programación con Python, comprensión general de HTML y CSS; que deseen adquirir habilidades avanzadas en el desarrollo de aplicaciones web utilizando Django y React.</p>
+      <p style="text-align: justify;">Este curso está diseñado para desarrolladores web principiantes o intermedios con
+        conocimientos básicos de programación con Python, comprensión general de HTML y CSS; que deseen adquirir
+        habilidades avanzadas en el desarrollo de aplicaciones web utilizando Django y React.</p>
     </section>
     <section class="mb-8">
       <h2 class="text-3xl font-bold mb-4">Módulos del Curso</h2>
       <!-- Aquí vamos a listar los módulos del curso -->
       <ul class="list-disc list-inside">
+
+        <li><strong>Modulo 0:</strong> <a href="presentations/bienvenida/index.html">Bienvenida</a></li>
         <li><strong>Modulo 1:</strong> Python Básico</li>
         <li><strong>Modulo 2:</strong> Python Intermedio</li>
         <li><strong>Modulo 3:</strong> Python Avanzado</li>
