--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
       </div>
       <h2 class="text-3xl font-bold mb-4">Presentaciones</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+
+        <!-- Presentación General del Curso -->
+                <div class="bg-white p-6 shadow-md rounded-lg text-center">
+                  <h3 class="text-2xl font-semibold mb-4">Bienvenida</h3>
+                  <img src="img/python-logo.png" alt="Python" class="mx-auto w-20 h-20 mb-4">
+                  <p class="text-gray-700 mb-4">En esta presentación tendrá una explicación general de cada uno de los temas que se tratarán en este curso</p>
+                  <a href="presentations/bienvenida/index.html"
+                    class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver presentación</a>
+                </div>
+
         <!-- Presentación Modulo 1: Python Básico -->
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Python Básico</h3>
