--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <nav>
         <ul class="flex space-x-4">
           <li><a href="#" class="text-white">Inicio</a></li>
+          <li><a href="actividades.html" class="text-white">Actividades</a></li>
           <li><a href="acerca.html" class="text-white">Acerca</a></li>
           <li><a href="contacto.html" class="text-white">Contacto</a></li>
         </ul>
@@ -245,8 +246,7 @@
             del curso, donde aplicaremos todos los conocimientos adquiridos en el desarrollo de una aplicación web
             completa utilizando Django.</p>
           <a href="presentations/bienvenida/index.html"
-            class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
-            presentación</a>
+            class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver presentación</a>
         </div>
       </div>
     </div>
