--- a/contacto.html
+++ b/contacto.html
@@ -18,6 +18,7 @@
       <nav>
         <ul class="flex space-x-4">
           <li><a href="index.html" class="text-white">Inicio</a></li>
+          <li><a href="actividades.html" class="text-white">Actividades</a></li>
           <li><a href="acerca.html" class="text-white">Acerca</a></li>
           <li><a href="contacto.html" class="text-white">Contacto</a></li>
         </ul>
