update first theme

--- a/presentations/01-introduccion-python/index.html
+++ b/presentations/01-introduccion-python/index.html
@@ -29,7 +29,7 @@
 			</section>
 
 			<section>
-				<h3>Objetivo</h3>
+				<h3>🎯 Objetivo:</h3>
 				<ul>
 					<li>Comprender los conceptos básicos de Python.</li>
 					<li>Familiarizarse con la sintaxis y la estructura del lenguaje.</li>
@@ -39,7 +39,103 @@
 
 			<section>
 				<section>
-					<h3>Ejemplo 1: Hola Mundo en Python.</h3>
+					<h3>¿Qué es Python? 💡</h3>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<li style="text-align: justify;">Python es un lenguaje de programación de alto nivel, interpretado y de
+						propósito
+						general.</li>
+					<li style="text-align: justify;">Es conocido por su sintaxis clara y legible, lo que lo hace ideal para
+						principiantes
+						y profesionales por igual.</li>
+				</section>
+
+				<section>
+					<h4>Variables y Tipos de Datos 🔢</h4>
+					<img src="lib/img/python-logo.png" alt="Variables Python"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+
+					<li style="text-align: justify;">En Python, las variables se pueden asignar directamente sin necesidad de
+						declarar su tipo.</li>
+					<li style="text-align: justify;">Los tipos de datos incluyen enteros, flotantes, cadenas, listas, tuplas y
+						diccionarios.</li>
+				</section>
+
+				<section>
+					<h4>Operadores ➕ ➖ ✖️ ➗</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<li style="text-align: justify;">Python admite una amplia gama de operadores para realizar operaciones
+						aritméticas, de comparación y lógicas.</li>
+				</section>
+				<section>
+					<h4>Entradas y Salidas de Datos 📥 📤</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;"><strong>Tipos de Datos:</strong> Explica cómo solicitar datos al usuario
+						utilizando la función input().</p>
+					<p style="text-align: justify;"><strong>Salida de Datos:</strong>Muestra cómo mostrar resultados utilizando la
+						función print().</p>
+				</section>
+				<section>
+					<h4>Estructuras de Control 🛠️</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;"><strong>Condicionales:</strong> Introduce las estructuras de control if, else
+						y elif. </p>
+					<p style="text-align: justify;"><strong>Bucles:</strong>Explica los bucles for y while para la repetición de
+						código.</p>
+				</section>
+				<section>
+					<h4>¿Qué es vscode 💻?</h4>
+					<img src="lib/img/visual-studio-code-logo.png" alt="Visual Studio Logo"
+						style="max-width: 15%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;"><strong>Entorno de Desarrollo Integrado (IDE):</strong> Para trabajar con
+						Python, se puede utilizar un entorno de desarrollo integrado (IDE) como PyCharm, un editor de código como
+						Visual
+						Studio Code o Jupyter Notebook.
+					</p>
+					<p style="text-align: justify;"> No son las unicas opciones para utilizar python, pero si las más habituales
+					</p>
+				</section>
+
+				<section>
+					<h4>¿Qué es Git 🕹️?</h4>
+					<img src="lib/img/git-logo.png" alt="Git Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;"><strong>Descarga e Instalación de Git:</strong> Por favor siga los
+						siguientes
+						pasos para realizar la descarga e instalación de Git en su computadora.</p>
+				</section>
+				<section>
+					<h4>¿Qué es Github 🎚️?</h4>
+					<img src="lib/img/github-logo.png" alt="Github" width="20%">
+					<li style="text-align: justify;">Es una plataforma de desarrollo colaborativo de software para alojar
+						proyectos utilizando el sistema de control de versiones Git.</li>
+				</section>
+				<section>
+					<h4>¿Qué es Github Classroom 💻?</h4>
+					<img src="lib/img/github classroom.png" alt="Github Classroom" width="20%">
+					<li style="text-align: justify;">Es una herramienta que permite a los profesores crear tareas y ejercicios
+						para sus estudiantes.</li>
+					<li style="text-align: justify;">Los estudiantes pueden aceptar la tarea y trabajar en ella en su propio
+						repositorio.</li>
+					<li style="text-align: justify;">Los profesores pueden ver el progreso de los estudiantes y proporcionar
+						comentarios y calificaciones.</li>
+				</section>
+				<section>
+					<h4>¿Cómo crear una cuenta en Github 🕹️?</h4>
+					<img src="lib/img/github-logo.png" alt="Git Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;"><strong>Creación de una Cuenta en GitHub:</strong> A continuación se
+						presenta
+						una guía sobre cómo crear una cuenta en GitHub, una plataforma de desarrollo colaborativo de software.
+					<p>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h4>Ejemplo 1: Hola Mundo en Python 🐍.</h4>
 					<pre><code class="python">
 print("Hola Mundo")
 					</code></pre>
@@ -47,7 +143,7 @@ print("Hola Mundo")
 						Mundo".</p>
 				</section>
 				<section>
-					<h3>Ejemplo 2: Operaciones básicas</h3>
+					<h4>Ejemplo 2: Operaciones básicas ➕ ➖ ✖️ ➗</h4>
 					<pre><code class="python">
 a = 10 // asignación de variable a
 b = 5 // asignación de variable b
@@ -60,7 +156,7 @@ print(a / b) // división
 						orientado a objetos.</p>
 				</section>
 				<section>
-					<h3>Ejemplo 3: Estructuras de control</h3>
+					<h4>Ejemplo 3: Estructuras de control 📥 📤</h4>
 					<pre><code class="python">
 a = 10
 b = 5
@@ -74,7 +170,7 @@ else:
 				</section>
 
 				<section>
-					<h3>Ejemplo 4: Bucle For</h3>
+					<h4>Ejemplo 4: Bucle For 🛠️</h4>
 					<pre><code class="python">
 for i in range(5):
 	print(i)
@@ -83,7 +179,7 @@ for i in range(5):
 				</section>
 
 				<section>
-					<h3>Ejemplo 5: Funciones</h3>
+					<h4>Ejemplo 5: Funciones ⚙️</h4>
 					<pre><code class="python">
 def suma(a, b):
 	return a + b
@@ -92,32 +188,25 @@ def suma(a, b):
 					<p style="text-align: justify;">Python soporta funciones, clases, módulos, excepciones, etc.</p>
 				</section>
 			</section>
-			<section>
-				<h3>Asignación</h3>
-				<p style="text-align: justify;">Desarrollar un programa en Python que solicite al usuario dos números y realice
-					las cuatro operaciones básicas (suma, resta, multiplicación, división) con estos números.</p>
-			</section>
 
 			<section>
 				<section>
-					<h3>¿Qué es Github?</h3>
-					<img src="lib/img/github-logo.png" alt="Github" width="20%">
-					<li style="text-align: justify;">Es una plataforma de desarrollo colaborativo de software para alojar
-						proyectos utilizando el sistema de control de versiones Git.</li>
+					<h4>Asignación 001 💻</h4>
+					<img src="lib/img/asignacion-hello-world.png" alt="Github Classroom" width="50%">
+					<p style="text-align: justify;">Desarrollar un programa en Python que muestre un hello World mediante la
+						consola.</p>
 				</section>
+
 				<section>
-					<h3>¿Qué es Github Classroom?</h3>
-					<img src="lib/img/github classroom.png" alt="Github Classroom" width="20%">
-					<li style="text-align: justify;">Es una herramienta que permite a los profesores crear tareas y ejercicios
-						para sus estudiantes.</li>
-					<li style="text-align: justify;">Los estudiantes pueden aceptar la tarea y trabajar en ella en su propio
-						repositorio.</li>
-					<li style="text-align: justify;">Los profesores pueden ver el progreso de los estudiantes y proporcionar
-						comentarios y calificaciones.</li>
+					<h4>Asignación 002 💻</h4>
+					<img src="lib/img/asignacion-calculadora.png" alt="Github Classroom" width="50%">
+					<p style="text-align: justify;">Desarrollar un programa en Python que solicite al usuario dos números y
+						realice
+						las cuatro operaciones básicas (suma, resta, multiplicación, división) con estos números.</p>
 				</section>
 			</section>
 			<section>
-				<h3>Recursos</h3>
+				<h3>Recursos 📒</h3>
 				<ul>
 					<li>Python <a href="https://www.python.org/">https://www.python.org/</a></li>
 					<li>Entorno de desarrollo integrado (IDE) como PyCharm, Visual Studio Code o Jupyter Notebook.</li>
@@ -126,7 +215,7 @@ def suma(a, b):
 					<li>Tutoriales en línea y recursos interactivos para aprender Python.</li>
 			</section>
 			<section>
-				<h3>Bibliografía</h3>
+				<h3>Bibliografía 📒</h3>
 				<ul>
 					<li></a>Python Documentation. Disponible en: <a
 							href="https://docs.python.org/es/3/">https://docs.python.org/es/3/.</a></li>
