--- a/actividades.html
+++ b/actividades.html
@@ -206,7 +206,7 @@
 
   <footer class="bg-gray-800 text-white py-4">
     <div class="container mx-auto text-center">
-      <p>Derechos de autor © 2024 Tu Sitio Web</p>
+      <p class="text-sm">© 2024 Curso de Django y React. Todos los derechos reservados.</p>
     </div>
   </footer>
 </body>
