--- a/contacto.html
+++ b/contacto.html
@@ -45,7 +45,7 @@
   </main>
   <footer class="bg-gray-800 text-white py-4">
     <div class="container mx-auto text-center">
-      <p>Derechos de autor © 2024 Curso de Django y React</p>
+      <p class="text-sm">© 2024 Curso de Django y React. Todos los derechos reservados.</p>
     </div>
   </footer>
   <script>
