update first theme

--- a/presentations/01-introduccion-python/index.html
+++ b/presentations/01-introduccion-python/index.html
@@ -38,6 +38,19 @@
 			</section>
 
 			<section>
+				<h4>¿Qué es vscode 💻?</h4>
+				<img src="lib/img/visual-studio-code-logo.png" alt="Visual Studio Logo"
+					style="max-width: 15%; max-height: 65vh; text-align: center;" />
+				<p style="text-align: justify;"><strong>Entorno de Desarrollo Integrado (IDE):</strong> Para trabajar con
+					Python, se puede utilizar un entorno de desarrollo integrado (IDE) como PyCharm, un editor de código como
+					Visual
+					Studio Code o Jupyter Notebook.
+				</p>
+				<p style="text-align: justify;"> No son las unicas opciones para utilizar python, pero si las más habituales
+				</p>
+			</section>
+
+			<section>
 				<section>
 					<h3>¿Qué es Python? 💡</h3>
 					<img src="lib/img/python-logo.png" alt="Python Logo"
@@ -86,18 +99,89 @@
 					<p style="text-align: justify;"><strong>Bucles:</strong>Explica los bucles for y while para la repetición de
 						código.</p>
 				</section>
+
 				<section>
-					<h4>¿Qué es vscode 💻?</h4>
-					<img src="lib/img/visual-studio-code-logo.png" alt="Visual Studio Logo"
-						style="max-width: 15%; max-height: 65vh; text-align: center;" />
-					<p style="text-align: justify;"><strong>Entorno de Desarrollo Integrado (IDE):</strong> Para trabajar con
-						Python, se puede utilizar un entorno de desarrollo integrado (IDE) como PyCharm, un editor de código como
-						Visual
-						Studio Code o Jupyter Notebook.
-					</p>
-					<p style="text-align: justify;"> No son las unicas opciones para utilizar python, pero si las más habituales
-					</p>
+					<h4>Definición y Llamada a Funciones 🛠️</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">Una función en Python es un bloque de código reutilizable que realiza una
+						tarea específica.</p>
 				</section>
+
+				<section>
+					<h4>Definición y Llamada a Funciones 🛠️</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">La definición de una función incluye el nombre de la función, los parámetros
+						(si los
+						hay) y el cuerpo de la función donde se especifica qué hace la función. </p>
+
+				</section>
+
+				<section>
+					<h4>Definición y Llamada a Funciones 🛠️</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">La llamada a una función se realiza utilizando su nombre seguido de
+						paréntesis,
+						opcionalmente pasando argumentos si la función los requiere.</p>
+				</section>
+
+				<section>
+					<h4>Parámetros y Argumentos 📝</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">Los parámetros son variables que se definen en la firma de la función y que
+						reciben valores cuando se llama a la función. </p>
+				</section>
+
+				<section>
+					<h4>Parámetros y Argumentos 📝</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+
+					<p style="text-align: justify;">Los argumentos son los valores reales que se pasan a la función cuando se la
+						llama. En Python, los parámetros se definen entre paréntesis en la definición de la función, mientras que
+						los argumentos se pasan
+						entre paréntesis al llamar a la función.</p>
+				</section>
+
+				<section>
+					<h4>Parámetros 🔧</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p>Los parámetros son variables locales a la función que reciben valores cuando se llama a la función.</p>
+				</section>
+
+				<section>
+					<h4>Parámetros 🔧</h4>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p>Pueden ser opcionales (con un valor por defecto) o requeridos. Los parámetros se definen en la firma de la
+						función
+						y se utilizan para permitir que la función reciba información desde fuera de su alcance.</p>
+				</section>
+
+				<section>
+					<h3>Argumentos 📝</h3>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+					<p>Los argumentos son los valores reales que se pasan a la función cuando se la llama. </p>
+
+					<p> Estos valores pueden ser constantes, variables, expresiones o incluso otras funciones. </p>
+
+				</section>
+
+				<section>
+					<h3>Argumentos 📝</h3>
+					<img src="lib/img/python-logo.png" alt="Python Logo"
+						style="max-width: 25%; max-height: 65vh; text-align: center;" />
+
+					<p>Cuando se llama a una función, los argumentos se corresponden con los parámetros definidos en la firma de
+						la función, y se utilizan dentro del cuerpo de la función para realizar operaciones.</p>
+				</section>
+
+
 
 				<section>
 					<h4>¿Qué es Git 🕹️?</h4>
@@ -143,7 +227,7 @@ print("Hola Mundo")
 						Mundo".</p>
 				</section>
 				<section>
-					<h4>Ejemplo 2: Operaciones básicas ➕ ➖ ✖️ ➗</h4>
+					<h4>Ejemplo 2: Operaciones básicas ➕ ➖ ✖️ </h4>
 					<pre><code class="python">
 a = 10 // asignación de variable a
 b = 5 // asignación de variable b
