--- a/actividades.html
+++ b/actividades.html
@@ -65,7 +65,7 @@
           <p class="text-gray-700 mb-4">En esta asignación, aprenderá los conceptos básicos de Python y escribirá su
             primer calculadora.</p>
           <a href="https://classroom.github.com/a/ftx0mB-g" target="_blank"
-            class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
+            class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-md hover:shadow-md transition duration-300">Ver
             Asignación</a>
         </div>
 
