Update git and github

--- a/presentations/introduccion-git-github/index.html
+++ b/presentations/introduccion-git-github/index.html
@@ -358,28 +358,305 @@ git diff
 			<section>
 				<section>
 					<h4>Ejemplo Práctico: Moviendo Cambios entre Estados en Git 📝</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
 					<p style="text-align: justify;">Hemos creado un repositorio de Git para nuestro proyecto helloWorld en Python,
 						pero cometimos un error al escribir el mensaje de bienvenida como "Bienvenio" en lugar de "Bienvenido".
-						Además, queremos mejorar el mensaje de <strong>"Ingrese su nombre"</strong> a <strong> "Por favor ingrese su nombre:
+						Además, queremos mejorar el mensaje de <strong>"Ingrese su nombre"</strong> a <strong> "Por favor ingrese su
+							nombre:
 							"</strong>.</p>
 				</section>
 				<section>
 					<h4>Mover Cambios de Local a Staging:</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
 					<p style="text-align: justify;">Abre el archivo hello_world.py en tu editor de código.
 						Encuentra la línea que dice <strong>print("Bienvenio Mundo")</strong> y cámbiala por
-						<strong>print("Bienvenido Mundo")</strong>.</p>
-					<p style="text-align: justify;">Encuentra la línea que dice nombre = input("Ingrese su nombre: ") y cámbiala
+						<strong>print("Bienvenido Mundo")</strong>.
+					</p>
+					<p style="text-align: justify;">Encuentra la línea que dice <strong>nombre = input("Ingrese su nombre:
+							")</strong> y cámbiala
 						por <strong>nombre = input("Por favor ingrese su nombre: ")."</strong>.</p>
+				</section>
+				<section>
+					<h4>Código</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">Actualmente tenemos el siguiente código: </p>
+					<pre>
+						<code>
+		
+def welcome_message():
+		name = input("Ingrese su nombre: ")
+		print("Bienvenio,", name, "al curso de Django y React!")
+		
+if __name__ == "__main__":
+welcome_message()
+					</code>
+				</pre>
+				</section>
+				<section>
+					<h4>Código</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">Debemos cambiarlo por el siguiente código: </p>
+					<pre>
+					<code>				
+def welcome_message():
+		name = input("Por favor ingrese su nombre: ")
+		print("Bienvenido,", name, "al curso de Django y React!")
 
+if __name__ == "__main__":
+		welcome_message()
+					</code>
+				</pre>
+					<p style="text-align: justify;">Guarda los cambios.</p>
+				</section>
 
+				<section>
+					<h4>Agregar Cambios de Local a Staging:</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">Para agregar los cambios realizados al área de staging, utiliza el comando:
+					</p>
+					<pre>
+						<code>
+git add nombre_archivo 
+						</code>
+					</pre>
+					<p style="text-align: justify;">para añadir un archivo específico o</p>
+					<pre>
+						<code>
+git add . 
+						</code>
+					</pre>
+					<p style="text-align: justify;">para añadir todos los archivos</p>
+				</section>
 
+				<section>
+					<h4>Vovler a Local:</h4>
+					<p style="text-align: justify;">Si deseas deshacer los cambios y volver al estado anterior (local), puedes
+						usar el comando:</p>
+					</p>
+					<pre>
+						<code>
+git checkout -- nombre_archivo
+						</code>
+					</pre>
+					<p style="text-align: justify;">para deshacer los cambios en un archivo específico o</p>
+					<pre>
+						<code>
+git checkout -- hello_world.py
+						</code>
+					</pre>
+					<p style="text-align: justify;">para deshacer todos los cambios en todos los archivos</p>
+				</section>
 
+				<section>
+					<h4>Mover los cambios de Statging a Commit</h4>
+					<p style="text-align: justify;">Una vez que estés satisfecho con los cambios y los hayas añadido al área de
+						staging, puedes confirmarlos en un commit
+						utilizando el comando:</p>
+					</p>
+					<pre>
+						<code>
+git commit -m "Mensaje descriptivo
+						</code>
+					</pre>
+					<p style="text-align: justify;">un ejemplo: </p>
+					<pre>
+										<code>
+git commit -m "Corregir mensaje de bienvenida y mejorar mensaje de ingreso"
 
-
-
+										</code>
+									</pre>
+					<p style="text-align: justify;">para deshacer todos los cambios en todos los archivos</p>
 				</section>
 			</section>
+			<section>
+				<section>
+					<h4>Estados en Git 📊</h4>
+					<ul>
+						<li style="text-align: justify;"><strong>Local:</strong> Representa los cambios que realizas en tu
+							repositorio local
+							antes de hacer un commit. Estos cambios están únicamente en tu máquina. </li>
+						<li style="text-align: justify;"><strong>Staging:</strong> Indica los cambios que has añadido al área de
+							preparación
+							con el comando git add. Estos cambios están listos para ser confirmados en el próximo commit. </li>
+					</ul>
+				</section>
+				<section>
+					<h4>Estados en Git 📊</h4>
+					<ul>
+						<li style="text-align: justify;"><strong>Commit:</strong> Son los cambios que has confirmado en tu
+							repositorio
+							local con el comando git commit. Estos cambios se han
+							guardado de manera permanente en tu repositorio local. </li>
+						<li style="text-align: justify;"><strong>Server:</strong> Son los cambios que has subido al repositorio
+							remoto
+							con el comando git push. Estos cambios están disponibles
+							para otros colaboradores del proyecto.</li>
+					</ul>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h4>Ejemplo Práctico: Corrección de Fusiones en Git 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
 
+					<p style="text-align: justify;">Tenemos un inconveniente con la fusión de las ramas feature_ciudad y
+						feature_atencion en la rama principal (master).</p>
+				</section>
+				<section>
+					<h4>Ejemplo Práctico: Corrección de Fusiones en Git 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+
+					<p style="text-align: justify;">Se esperaba: </p>
+					<pre>
+						<code>
+def welcome_message():
+		name = input("Por favor ingrese su nombre: ")
+		atencion = input("¿Qué fue lo que más te llamó la atención del curso? ")
+		print("Bienvenido,", name, "al curso de Django y React!")
+		print("Esperamos que disfrutes tu estadía en", ciudad, "y que aprendas mucho sobre", atencion)
+						</code>
+					</pre>
+				</section>
+				<section>
+					<h4>Ejemplo Práctico: Corrección de Fusiones en Git 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+
+					<p style="text-align: justify;">Pero si te fijas bien en la línea 3, el código debería ser:</p>
+					<pre>
+						<code>
+ciudad = input("¿De dónde eres? ")
+						</code>
+					</pre>
+					<p style="text-align: justify;">Sin embargo, en el código final no se encuentra la variable ciudad en la línea
+						3.</p>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h4>Corrección del Error en la Rama Específica: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">Al parecer, al fusionar las ramas <strong>feature_ciudad</strong> y
+						<strong>feature_atencion</strong>, se sobrescribieron los cambios realizados en la rama
+						<strong>feature_ciudad</strong>, lo cual provocó un error en la presentación del programa.
+					</p>
+				</section>
+				<section>
+					<h4>Corrección del Error en la Rama Específica: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<p style="text-align: justify;">Al parecer, al fusionar las ramas <strong>feature_ciudad</strong> y
+						<strong>feature_atencion</strong>, se sobrescribieron los cambios realizados en la rama
+						<strong>feature_ciudad</strong>, lo cual provocó un error en la presentación del programa.
+					</p>
+				</section>
+				<section>
+					<h4>Corrección del Error en la Rama Específica: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<ol>
+						<li style="text-align: justify;">Primero, cambia a la rama donde ocurrió el error utilizando <strong>git
+								checkout nombre_rama</strong> para corregir el problema en esa rama.
+						</li>
+						<pre>
+							<code>
+git checkout feature_ciudad
+							</code>
+						</pre>
+					</ol>
+				</section>
+				<section>
+					<h4>Corrección del Error en la Rama Específica: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<ol>
+						<li style="text-align: justify;">Realiza los cambios necesarios en el archivo hello_world.py para corregir
+							el error.</li>
+						<pre>
+							<code>
+...
+ciudad = input("¿De dónde eres? ") # Mantener esta línea
+atencion = input("¿Qué fue lo que más te llamó la atención del curso? ") # Agregar esta línea
+...
+
+							</code>
+						</pre>
+					</ol>
+				</section>
+				<section>
+					<h4>Corrección del Error en la Rama Específica: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<ol>
+						<li style="text-align: justify;">Luego, añade y haz un commit con los cambios corregidos.</li>
+						<pre>
+							<code>
+git add hello_world.py
+git commit -m "Corregir error al fusionar ramas"
+							</code>
+						</pre>
+					</ol>
+				</section>
+				<section>
+					<h4>Fusión de la Rama Corregida con la Rama Principal: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<ol>
+						<li style="text-align: justify;">Una vez que hayas corregido el error en la rama feature_ciudad, cambia a la
+							rama principal (master).</li>
+						<pre>
+							<code>
+git checkout master
+							</code>
+						</pre>
+					</ol>
+				</section>
+				<section>
+					<h4>Verificación y Resolución de Conflictos (si es necesario): 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<ol>
+						<li style="text-align: justify;">Es posible que al fusionar la rama corregida con la rama principal, se
+							produzcan conflictos si los cambios son
+							incompatibles. En ese caso, Git te indicará los archivos con conflictos y deberás resolverlos manualmente.
+						</li>
+					</ol>
+				</section>
+				<section>
+					<h4>Añade los Archivos Modificados, Realiza un Commit y Completa el Proceso de Fusión: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<ol>
+						<li style="text-align: justify;">Después de resolver los conflictos, añade los archivos modificados, realiza
+							un commit y completa el proceso de fusión.
+						</li>
+						<pre>
+							<code>
+git status
+git diff hello_world.py
+							</code>
+						</pre>
+					</ol>
+				</section>
+				<section>
+					<h4>Añade los Archivos Modificados, Realiza un Commit y Completa el Proceso de Fusión: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<ol>
+						<li style="text-align: justify;">Después de resolver los conflictos, añade los archivos modificados, realiza
+							un commit y completa el proceso de fusión.
+						</li>
+						<pre>
+							<code>
+git add hello_world.py
+git commit -m "Corregir errores de fusión"
+							</code>
+						</pre>
+					</ol>
+				</section>
+				<section>
+					<h4>Añade los Archivos Modificados, Realiza un Commit y Completa el Proceso de Fusión: 🛠️</h4>
+					<img src="lib/img/git-logo.png" alt="Git" style="max-width: 10%; max-height: 65vh; text-align: center;" />
+					<ol>
+						<li style="text-align: justify;">Siguiendo estos pasos, podrás corregir errores de fusiones en Git y
+							asegurarte de
+							que las ramas se fusionen
+							correctamente sin perder cambios importantes.
+						</li>
+					</ol>
+				</section>
+			</section>
 		</div>
 	</div>
 
