--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <p class="text-gray-700 mb-4" style="text-align: justify;">En esta presentación, aprenderemos sobre el control
             de versiones con Git y Github, así como el uso de contenedores con Docker para el desarrollo de software.
           </p>
-          <a href="#"
+          <a href="presentations\introduccion-git-github\index.html"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
         </div>
