--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
 
         <!-- Presentación Modulo 4: Git y Github / Docker -->
-        <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Git y Github / Docker</h3>
           <table class="mx-auto mb-4">
             <tr>
@@ -170,10 +170,10 @@
           <a href="presentations\introduccion-git-github\index.html"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div>
+        </div> -->
 
         <!-- Presentación Modulo 5: Django - Fundamentos -->
-        <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Django - Fundamentos</h3>
           <img src="img/django-logo.jpg" alt="Django" class="mx-auto w-20 h-20 mb-4">
           <p class="text-gray-700 mb-4" style="text-align: justify;">En esta presentación, nos sumergiremos en los
@@ -182,10 +182,10 @@
           <a href="#"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div>
+        </div> -->
 
         <!-- Presentación Modulo 6: Django - Desarrollo Intermedio / Desarrollo Avanzado -->
-        <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Django - Intermedio/Avanzado</h3>
           <img src="img/django-logo.jpg" alt="Django" class="mx-auto w-20 h-20 mb-4">
           <p class="text-gray-700 mb-4" style="text-align: justify;">En esta presentación, exploraremos temas más
@@ -194,10 +194,10 @@
           <a href="#"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div>
+        </div> -->
 
         <!-- Presentación Modulo 7: HTML5, CSS3, JavaScript -->
-        <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">HTML5, CSS3, JavaScript</h3>
           <img src="img/html-css-javascript-logo.png" alt="HTML5, CSS3, JavaScript" class="mx-auto w-20 h-20 mb-4">
           <p class="text-gray-700 mb-4" style="text-align: justify;">En esta presentación, exploraremos los fundamentos
@@ -206,10 +206,10 @@
           <a href="#"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div>
+        </div> -->
 
         <!-- Presentación Modulo 8: Node.js y NPM -->
-        <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Node.js y NPM</h3>
           <table class="mx-auto mb-4">
             <tr>
@@ -223,10 +223,10 @@
           <a href="#"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div>
+        </div> -->
 
         <!-- Presentación Modulo 9: React - Fundamentos / Intermedio -->
-        <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">React - Fundamentos/Intermedio</h3>
           <img src="img/react-logo.png" alt="React" class="mx-auto w-20 h-20 mb-4">
           <p class="text-gray-700 mb-4" style="text-align: justify;">En esta presentación, exploraremos los fundamentos
@@ -234,10 +234,10 @@
           <a href="#"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div>
+        </div> -->
 
         <!-- Presentación Modulo 10: React - Desarrollo Avanzado -->
-        <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">React - Desarrollo Avanzado</h3>
           <img src="img/react-logo.png" alt="React" class="mx-auto w-20 h-20 mb-4">
           <p class="text-gray-700 mb-4" style="text-align: justify;">En esta presentación, nos adentraremos en el
@@ -246,10 +246,10 @@
           <a href="#"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div>
+        </div> -->
 
         <!-- Presentación Modulo 11: Proyecto Final Django -->
-        <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Proyecto Final Django</h3>
           <table class="mx-auto mb-4">
             <tr>
@@ -263,7 +263,7 @@
           <a href="#"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </main>
