--- a/actividades.html
+++ b/actividades.html
@@ -105,7 +105,7 @@
           <h3 class="text-2xl font-semibold mb-4">Python Avanzado</h3>
           <img src="img/python-logo.png" alt="Python" class="mx-auto w-20 h-20 mb-4">
           <p class="text-gray-700 mb-4">En esta asignación, explorará técnicas avanzadas de Python y aplicará sus conocimientos utilizando Programación Orientada a Objetos</p>
-          <a href="https://classroom.github.com/a/VNVyEmiX" target="_blank"
+          <a href="https://classroom.github.com/a/WLSIJIlb" target="_blank"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             Asignación</a>
         </div>
