--- a/actividades.html
+++ b/actividades.html
@@ -120,7 +120,7 @@
             Asignación</a>
         </div>
 
-        <!-- Módulo 4: Git y Github / Docker
+        <!-- Módulo 4: Git y Github / Docker -->
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Git y Github / Docker</h3>
           <table class="mx-auto mb-4">
@@ -137,7 +137,7 @@
             Asignación</a>
         </div>
 
-        Módulo 5: Django - Fundamentos
+        <!-- Módulo 5: Django - Fundamentos
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Django - Fundamentos</h3>
           <img src="img/django-logo.jpg" alt="Django" class="mx-auto w-20 h-20 mb-4">
@@ -147,9 +147,9 @@
           <a href="#" target="_blank"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             Asignación</a>
-        </div>
+        </div> -->
 
-        Módulo 6: Django - Desarrollo Intermedio / Desarrollo Avanzado
+        <!-- Módulo 6: Django - Desarrollo Intermedio / Desarrollo Avanzado
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Django - Intermedio/Avanzado</h3>
           <img src="img/django-logo.jpg" alt="Django" class="mx-auto w-20 h-20 mb-4">
@@ -158,9 +158,9 @@
           <a href="#" target="_blank"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             Asignación</a>
-        </div>
+        </div> -->
 
-        Módulo 7: HTML5, CSS3, JavaScript
+        <!-- Módulo 7: HTML5, CSS3, JavaScript
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">HTML5, CSS3, JavaScript</h3>
           <img src="img/html-css-javascript-logo.png" alt="HTML5, CSS3, JavaScript" class="mx-auto w-20 h-20 mb-4">
@@ -170,9 +170,9 @@
           <a href="#" target="_blank"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             Asignación</a>
-        </div>
+        </div> -->
 
-        Módulo 8: Node.js y NPM
+        <!-- Módulo 8: Node.js y NPM
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Node.js y NPM</h3>
           <table class="mx-auto mb-4">
@@ -187,9 +187,9 @@
           <a href="#" target="_blank"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             Asignación</a>
-        </div>
+        </div> -->
 
-        Módulo 9: React - Fundamentos / Intermedio
+        <!-- Módulo 9: React - Fundamentos / Intermedio
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">React - Fundamentos / Intermedio</h3>
           <img src="img/react-logo.png" alt="React" class="mx-auto w-20 h-20 mb-4">
@@ -199,9 +199,9 @@
           <a href="#" target="_blank"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             Asignación</a>
-        </div>
+        </div> -->
 
-        Módulo 10: React - Desarrollo Avanzado
+        <!-- Módulo 10: React - Desarrollo Avanzado
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">React - Desarrollo Avanzado</h3>
           <img src="img/react-logo.png" alt="React" class="mx-auto w-20 h-20 mb-4">
@@ -211,7 +211,7 @@
           <a href="#" target="_blank"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             Asignación</a>
-        </div>
+        </div> -->
 
         <!-- Módulo 11: Proyecto Final Django
         <div class="bg-white p-6 shadow-md rounded-lg text-center">
