--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
 
         <!-- Presentación Modulo 4: Git y Github / Docker -->
-        <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
+        <div class="bg-white p-6 shadow-md rounded-lg text-center">
           <h3 class="text-2xl font-semibold mb-4">Git y Github / Docker</h3>
           <table class="mx-auto mb-4">
             <tr>
@@ -170,7 +170,7 @@
           <a href="presentations\introduccion-git-github\index.html"
             class="block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded hover:shadow-md transition duration-300">Ver
             presentación</a>
-        </div> -->
+        </div>
 
         <!-- Presentación Modulo 5: Django - Fundamentos -->
         <!-- <div class="bg-white p-6 shadow-md rounded-lg text-center">
